--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
         <!-- content section -->
         <section class="contents">
             <article id="search-engine-optimization" class="content search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" />
+                <img src="./assets/images/search-engine-optimization.jpg" alt="overhead image of desk with laptop, pens, cup of coffee and notebook" />
                 <div class="content-wrap">
                     <h3>Search Engine Optimization</h3>
                     <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
                 </div>
             </article>
             <article id="online-reputation-management" class="content online-reputation-management">
-                <img src="./assets/images/online-reputation-management.jpg" />
+                <img src="./assets/images/online-reputation-management.jpg" alt="person working on laptop and looking at cell phone" />
                 <div class="content-wrap">
                     <h3>Online Reputation Management</h3>
                     <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.</p>
                 </div>
             </article>
             <article id="social-media-marketing" class="content social-media-marketing">
-                <img src="./assets/images/social-media-marketing.jpg" />
+                <img src="./assets/images/social-media-marketing.jpg" alt="overhead image of people sitting at a conference table sharing ideas with laptops and tablets" />
                 <div class="content-wrap">
                     <h3>Social Media Marketing</h3>
                     <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
