--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </footer>
     <div class="home">
         <a href="#home">
-            <img src="./assets/images/up-arrow-icon.png">
+            <img src="./assets/images/up-arrow-icon.png" alt="double up arrows">
             <div>Top</div>
         </a>    
     </div>
