updated readme, added responsive css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon Marketing Agency</title>
 </head>
@@ -11,17 +12,9 @@
     <header id="home">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
+            <a href="#search-engine-optimization">Search Engine Optimization</a>
+            <a href="#online-reputation-management">Online Reputation Management</a>
+            <a href="#social-media-marketing">Social Media Marketing</a>
         </nav>         
         <section class="hero"></section>    
     </header>
@@ -54,7 +47,7 @@
         <!-- content section -->
         <section class="contents">
             <article id="search-engine-optimization" class="content search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" alt="overhead image of desk with laptop, pens, cup of coffee and notebook" />
+                <img src="./assets/images/search-engine-optimization.jpg" alt="overhead image of desk with laptop, pens, cups of coffee and notebook" />
                 <div class="content-wrap">
                     <h3>Search Engine Optimization</h3>
                     <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
